<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/selected_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 selected"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorOnSurface" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/menu_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:padding="8dp"
        android:src="@drawable/ic_trash"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/menu_mark_as_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/mark_as_read"
        android:padding="8dp"
        android:src="@drawable/ic_read"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/menu_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/translate"
        android:padding="8dp"
        android:src="@drawable/ic_language"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/menu_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cancel"
        android:padding="8dp"
        android:src="@drawable/ic_cancel"
        app:tint="?attr/colorOnSurface" />


</LinearLayout>
